refactoring - use smart pointer in arrays

--- a/Addin/Addin.vcproj
+++ b/Addin/Addin.vcproj
@@ -567,6 +567,10 @@
 			>
 		</File>
 		<File
+			RelativePath=".\lib\Ptr.h"
+			>
+		</File>
+		<File
 			RelativePath="Resource.h"
 			>
 		</File>
