multiselect - show checkboxes

--- a/Addin/Addin.vcproj
+++ b/Addin/Addin.vcproj
@@ -414,6 +414,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\res\checkboxes.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\res\icon16.png"
 				>
 			</File>
